--- a/vty.cabal
+++ b/vty.cabal
@@ -37,7 +37,7 @@ data-files:          README.md,
 
 library
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
   build-depends:       base >= 4 && < 5,
                        bytestring,
                        containers,
@@ -90,7 +90,7 @@ library
 
   hs-source-dirs:      src
 
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
                        ForeignFunctionInterface
 
   ghc-options:         -O2 -funbox-strict-fields -Wall -fno-full-laziness -fspec-constr -fspec-constr-count=10
@@ -101,7 +101,7 @@ library
 
 test-suite verify-attribute-ops
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
   type:                detailed-0.9
   hs-source-dirs:      test
   test-module:         VerifyAttributeOps
@@ -121,7 +121,7 @@ test-suite verify-attribute-ops
 
 test-suite verify-using-mock-terminal
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -153,7 +153,7 @@ test-suite verify-using-mock-terminal
   
 test-suite verify-terminal
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -186,7 +186,7 @@ test-suite verify-terminal
 
 test-suite verify-display-attributes
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -217,7 +217,7 @@ test-suite verify-display-attributes
 
 test-suite verify-empty-image-props
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -243,7 +243,7 @@ test-suite verify-empty-image-props
 
 test-suite verify-eval-terminfo-caps
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -270,7 +270,7 @@ test-suite verify-eval-terminfo-caps
 
 test-suite verify-image-ops
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -298,7 +298,7 @@ test-suite verify-image-ops
 
 test-suite verify-image-trans
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -326,7 +326,7 @@ test-suite verify-image-trans
 
 test-suite verify-inline
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -353,7 +353,7 @@ test-suite verify-inline
 
 test-suite verify-parse-terminfo-caps
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -381,7 +381,7 @@ test-suite verify-parse-terminfo-caps
   
 test-suite verify-simple-span-generation
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -413,7 +413,7 @@ test-suite verify-simple-span-generation
   
 test-suite verify-crop-span-generation
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -445,7 +445,7 @@ test-suite verify-crop-span-generation
 
 test-suite verify-layers-span-generation
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -476,7 +476,7 @@ test-suite verify-layers-span-generation
 
 test-suite verify-utf8-width
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -502,7 +502,7 @@ test-suite verify-utf8-width
   
 test-suite verify-using-mock-input
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   type:                detailed-0.9
 
@@ -531,7 +531,7 @@ executable vty-interactive-terminal-test
   main-is:             interactive_terminal_test.hs
 
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   hs-source-dirs:      test
 
@@ -556,7 +556,7 @@ executable vty-benchmark
   main-is:             benchmark.hs
 
   default-language:    Haskell2010
-  extensions:          ScopedTypeVariables
+  default-extensions:          ScopedTypeVariables
 
   hs-source-dirs:      test
 
