--- a/vty.cabal
+++ b/vty.cabal
@@ -506,20 +506,21 @@ test-suite verify-utf8-width
   
 test-suite verify-using-mock-input
   default-language:    Haskell2010
-  default-extensions:          ScopedTypeVariables
+  default-extensions:  ScopedTypeVariables
 
-  type:                detailed-0.9
+  type:                exitcode-stdio-1.0
 
   hs-source-dirs:      test
 
-  test-module:         VerifyUsingMockInput
-
-  other-modules:       Verify
+  main-is:             VerifyUsingMockInput.hs
 
   build-depends:       vty,
                        Cabal == 1.18.*,
                        QuickCheck >= 2.4,
+                       smallcheck == 1.*,
                        quickcheck-assertions >= 0.1.1,
+                       test-framework == 0.8.*,
+                       test-framework-smallcheck == 0.2.*,
                        random == 1.0.*,
                        base >= 4 && < 5,
                        bytestring,
