--- a/vty.cabal
+++ b/vty.cabal
@@ -62,6 +62,7 @@ library
                        Graphics.Vty.Input
                        Graphics.Vty.Input.Data
                        Graphics.Vty.Input.Internal
+                       Graphics.Vty.Input.Terminfo
                        Graphics.Vty.Picture
                        Graphics.Vty.Terminal
                        Graphics.Text.Width
@@ -527,6 +528,7 @@ test-suite verify-using-mock-input
                        containers,
                        deepseq >= 1.1 && < 1.4,
                        mtl >= 1.1.1.0 && < 2.2,
+                       terminfo >= 0.3 && < 0.4,
                        text >= 0.11.3,
                        unix,
                        utf8-string >= 0.3 && < 0.4,
