update cabal file

--- a/vty.cabal
+++ b/vty.cabal
@@ -570,11 +570,13 @@ executable vty-rouge
 
   build-depends:       vty,
                        base >= 4 && < 5,
+                       array >= 0.4 && < 2.0,
                        bytestring,
                        containers,
                        lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
+                       random >= 1.0 && < 2.0,
                        text >= 0.11.3,
                        utf8-string >= 0.3 && < 0.4,
                        vector >= 0.7
