--- a/vty.cabal
+++ b/vty.cabal
@@ -83,6 +83,8 @@ library
                        Graphics.Vty.Terminal.XTermColor
                        Graphics.Vty.Terminal.TerminfoBased
 
+  other-modules:       Graphics.Vty.Attributes.Color
+                       Graphics.Vty.Attributes.Color240
 
   c-sources:           cbits/gwinsz.c
                        cbits/set_term_timing.c
