--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,21 @@
 language: haskell
+
 notifications:
   email: false
+
+matrix:
+  allow_failures:
+    - env: GHCVER=head
+
+env:
+ - GHCVER=6.12.3
+ - GHCVER=7.2.2
+ - GHCVER=7.4.2
+ - GHCVER=7.6.3
+ - GHCVER=head
+
+before_install:
+ - sudo add-apt-repository -y ppa:hvr/ghc
+ - sudo apt-get update
+ - sudo apt-get install cabal-install-1.18 ghc-$GHCVER
+ - export PATH=/opt/ghc/$GHCVER/bin:$PATH
