derive new input loop

--- a/vty.cabal
+++ b/vty.cabal
@@ -41,6 +41,7 @@ library
   build-depends:       base >= 4 && < 5,
                        bytestring,
                        containers,
+                       data-default >= 0.5.3,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
                        lens >= 3.9.0.2,
@@ -50,6 +51,7 @@ library
                        parallel >= 2.2 && < 3.3,
                        parsec >= 2 && < 4,
                        terminfo >= 0.3 && < 0.4,
+                       transformers >= 0.3.0.0,
                        text >= 0.11.3,
                        unix,
                        utf8-string >= 0.3 && < 0.4,
