--- a/test/vty-examples.cabal
+++ b/test/vty-examples.cabal
@@ -25,6 +25,7 @@ executable vty-interactive-terminal-test
 
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
 
   build-depends:       vty,
                        base >= 4 && < 5,
@@ -48,6 +49,7 @@ executable vty-event-echo
 
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
 
   build-depends:       vty,
                        base >= 4 && < 5,
@@ -66,6 +68,7 @@ executable vty-rouge
 
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
 
   build-depends:       vty,
                        base >= 4 && < 5,
@@ -85,6 +88,7 @@ executable vty-benchmark
 
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
 
   build-depends:       vty,
                        base >= 4 && < 5,
