correct compile failures

--- a/test/vty-examples.cabal
+++ b/test/vty-examples.cabal
@@ -31,6 +31,7 @@ executable vty-interactive-terminal-test
                        base >= 4 && < 5,
                        bytestring,
                        containers,
+                       data-default >= 0.5.3,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
                        lens,
@@ -56,6 +57,7 @@ executable vty-event-echo
                        array >= 0.4 && < 2.0,
                        bytestring,
                        containers,
+                       data-default >= 0.5.3,
                        lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
@@ -75,6 +77,7 @@ executable vty-rouge
                        array >= 0.4 && < 2.0,
                        bytestring,
                        containers,
+                       data-default >= 0.5.3,
                        lens,
                        mtl >= 1.1.1.0 && < 2.2,
                        parallel >= 2.2 && < 3.3,
@@ -95,6 +98,7 @@ executable vty-benchmark
                        bytestring,
                        Cabal == 1.18.*,
                        containers,
+                       data-default >= 0.5.3,
                        deepseq >= 1.1 && < 1.4,
                        ghc-prim,
                        lens,
