--- a/vty.cabal
+++ b/vty.cabal
@@ -39,6 +39,7 @@ tested-with:         GHC >= 7.6.2
 library
   default-language:    Haskell2010
   build-depends:       base >= 4 && < 5,
+                       blaze-builder >= 0.3.3.2 && < 0.4,
                        bytestring,
                        containers,
                        data-default >= 0.5.3,
@@ -73,7 +74,6 @@ library
                        Codec.Binary.UTF8.Debug
                        Data.Terminfo.Parse
                        Data.Terminfo.Eval
-                       Data.Marshalling
                        Graphics.Vty.Debug
                        Graphics.Vty.DisplayAttributes
                        Graphics.Vty.Image.Internal
