--- a/vty.cabal
+++ b/vty.cabal
@@ -113,7 +113,7 @@ library
 
   ghc-prof-options:    -O2 -funbox-strict-fields -threaded -caf-all -Wall -fspec-constr -fspec-constr-count=10
 
-  cc-options:          -O2
+  cc-options:          -O2 -fpic
 
 test-suite verify-attribute-ops
   default-language:    Haskell2010
