add a demo program to vty distribution

--- a/vty.cabal
+++ b/vty.cabal
@@ -31,7 +31,7 @@ description:
   &#169; 2006-2007 Stefan O'Rear; BSD3 license.
   .
   &#169; Corey O'Connor; BSD3 license.
-cabal-version:       >= 1.18.0
+cabal-version:       >= 1.20.0
 build-type:          Simple
 data-files:          README.md,
                      TODO,
@@ -116,6 +116,20 @@ library
 
   cc-options:          -O2 -fpic
 
+executable vty-demo
+  main-is:             Demo.hs
+
+  default-language:    Haskell2010
+  default-extensions:  ScopedTypeVariables
+  ghc-options:         -threaded
+
+  build-depends:       vty,
+                       base >= 4 && < 5,
+                       containers,
+                       data-default >= 0.5.3,
+                       lens,
+                       mtl >= 1.1.1.0 && < 2.2
+
 test-suite verify-attribute-ops
   default-language:    Haskell2010
   default-extensions:  ScopedTypeVariables
@@ -123,7 +137,7 @@ test-suite verify-attribute-ops
   hs-source-dirs:      test
   test-module:         VerifyAttributeOps
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -155,7 +169,7 @@ test-suite verify-using-mock-terminal
                        Verify.Graphics.Vty.Output
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -188,7 +202,7 @@ test-suite verify-terminal
                        Verify.Graphics.Vty.Output
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -220,7 +234,7 @@ test-suite verify-display-attributes
                        Verify.Graphics.Vty.Span
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -246,7 +260,7 @@ test-suite verify-empty-image-props
   other-modules:       Verify
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -273,7 +287,7 @@ test-suite verify-eval-terminfo-caps
                        Verify.Graphics.Vty.Output
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -303,7 +317,7 @@ test-suite verify-image-ops
                        Verify.Graphics.Vty.Image
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -331,7 +345,7 @@ test-suite verify-image-trans
                        Verify.Graphics.Vty.Image
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -358,7 +372,7 @@ test-suite verify-inline
                        Verify.Graphics.Vty.Output
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -386,7 +400,7 @@ test-suite verify-parse-terminfo-caps
                        Verify.Graphics.Vty.Output
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -418,7 +432,7 @@ test-suite verify-simple-span-generation
                        Verify.Graphics.Vty.Span
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -450,7 +464,7 @@ test-suite verify-crop-span-generation
                        Verify.Graphics.Vty.Span
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -482,7 +496,7 @@ test-suite verify-layers-span-generation
                        Verify.Graphics.Vty.Span
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -508,7 +522,7 @@ test-suite verify-utf8-width
   other-modules:       Verify
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        QuickCheck >= 2.4,
                        random == 1.0.*,
                        base >= 4 && < 5,
@@ -532,7 +546,7 @@ test-suite verify-using-mock-input
   main-is:             VerifyUsingMockInput.hs
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        data-default >= 0.5.3,
                        QuickCheck >= 2.4,
                        smallcheck == 1.*,
@@ -565,7 +579,7 @@ test-suite verify-config
   main-is:             VerifyConfig.hs
 
   build-depends:       vty,
-                       Cabal == 1.18.*,
+                       Cabal == 1.20.*,
                        data-default >= 0.5.3,
                        HUnit,
                        QuickCheck >= 2.4,
