--- a/vty.cabal
+++ b/vty.cabal
@@ -21,8 +21,8 @@ description:
   If your terminal is not behaving as expected the results of the vty-interactive-terminal-test
   executable should be sent to the Vty maintainter to aid in debugging the issue.
   .
-  Notable infelicities: Sometimes poor efficiency; Assumes UTF-8 character encoding support by the
-  terminal; Poor signal handling; Requires terminfo.
+  Notable infelicities: Assumes UTF-8 character encoding support by the terminal; Poor signal
+  handling; Requires terminfo.
   .
   Project is hosted on github.com: https:\/\/github.com\/coreyoconnor\/vty
   .
